--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,17 @@
 @font-face {
-  font-family: 'HelveticaNeueLT Com 63 MdEx';
-  src: url('../fonts/HelveticaNeueLTCom-HvEx.woff2') format('woff2'),
-      url('../fonts/HelveticaNeueLTCom-HvEx.woff') format('woff');
+  font-family: "HelveticaNeueLT Com 63 MdEx";
+  src: url("../fonts/HelveticaNeueLTCom-HvEx.woff2") format("woff2"),
+    url("../fonts/HelveticaNeueLTCom-HvEx.woff") format("woff");
 }
 
 body {
   background: #000000;
   color: #fff;
-  font-family: 'HelveticaNeueLT Com 63 MdEx';
+  font-family: "HelveticaNeueLT Com 63 MdEx";
   margin: 0;
   transition: all 200ms;
   will-change: background;
+  cursor: url("../assets/cursor.svg"), pointer;
 }
 
 .article {
@@ -403,7 +404,7 @@ h1 {
 .moreWorks {
   position: absolute;
   bottom: 50px;
-  font-family: 'HelveticaNeueLT Com 63 MdEx';
+  font-family: "HelveticaNeueLT Com 63 MdEx";
   text-transform: uppercase;
   text-align: center;
   font-size: 12px;
@@ -432,7 +433,7 @@ h2 {
 }
 
 .myCreationsName:hover {
-  color: #FFFFFF;
+  color: #ffffff;
   transition: all 200ms ease-out;
 }
 
@@ -456,5 +457,5 @@ h2 {
   flex-direction: column;
   height: 35vh;
   color: #000000;
-  background: #FFFFFF;
+  background: #ffffff;
 }
