--- a/css/styles.css
+++ b/css/styles.css
@@ -326,6 +326,18 @@ li a:hover {
   }
 }
 
+@keyframes scale {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(.5);
+    opacity: 0.5;
+  }
+}
+
 .glitch {
   position: relative;
   margin: 0 auto;
@@ -430,6 +442,7 @@ h2 {
   color: transparent;
   -webkit-text-stroke: 2px white;
   margin-top: 15px;
+  z-index: 300;
 }
 
 .myCreationsName:hover {
@@ -458,4 +471,22 @@ h2 {
   height: 35vh;
   color: #000000;
   background: #ffffff;
+}
+
+.projectpic {
+  display: none;
+  padding: 10px;
+  text-align: center;
+}
+
+.projectpic img {
+  animation: scale 1s;
+  transform: scale(.5);
+  position: absolute;
+  z-index: 0;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  opacity: 0.5;
 }
