--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,15 @@ body {
   cursor: url("../assets/cursor.svg"), pointer;
 }
 
-.article {
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.works {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -373,6 +381,7 @@ li a:hover {
   position: fixed;
   background-color: transparent;
   padding: 30px;
+  animation: fadeInUp 1s;
 }
 
 .headerWrapper {
@@ -391,6 +400,7 @@ li a:hover {
   height: 32px;
   margin-left: 5px;
   margin-right: 5px;
+  fill: white;
 }
 
 .nav-menu a {
@@ -520,5 +530,35 @@ h2 {
   100% {
         transform: translate(0, 20px) rotate(45deg);
         opacity: 0;
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+    -ms-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
   }
 }
