--- a/css/styles.css
+++ b/css/styles.css
@@ -465,24 +465,6 @@ h2 {
   content: ">";
 }
 
-.clear {
-  clear: both;
-}
-
-#five article {
-  height: 65vh;
-}
-
-.footerMe {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: 35vh;
-  color: #000000;
-  background: #ffffff;
-}
-
 .projectpic {
   display: none;
   padding: 10px;
@@ -525,24 +507,31 @@ h2 {
   }
 
   .glitch {
-    font-size: 56px;
+    font-size: 34px;
+    padding-bottom: 25px;
   }
 
   .txt-rotate {
-    font-size: 36px;
+    font-size: 18px;
+    -webkit-text-stroke: .5px white;
+    width: 50%;
   }
 
   .myCreations {
-    font-size: 42px;
+    font-size: 34px;
     color: transparent;
     -webkit-text-stroke: 1px white;
+    padding-bottom: 25px;
   }
 
   .myCreationsName {
-    font-size: 36px;
+    font-size: 22px;
     color: white;
     width: 50vh;
     text-align: center;
+    -webkit-text-stroke: 0px white;
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
 
 }
