--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body {
   justify-content: center;
   flex-direction: column;
   height: 100vh;
+  width: 100%;
 }
 
 .works {
@@ -341,7 +342,7 @@ li a:hover {
   }
 
   100% {
-    transform: scale(.5);
+    transform: scale(0.5);
     opacity: 0.5;
   }
 }
@@ -477,7 +478,7 @@ h2 {
 
 .projectpic img {
   animation: scale 1s;
-  transform: scale(.5);
+  transform: scale(0.5);
   position: absolute;
   z-index: 0;
   margin-left: auto;
@@ -511,85 +512,87 @@ h2 {
   }
 
   .burger-button {
-    position:fixed;
-    top: 2vh;
-    right: 2vh;
+    position: fixed;
+    top: 30px;
+    right: 25px;
     z-index: 9;
     padding: 8px;
+    animation: fadeInUp 2s;
   }
-  /*this is where you can chand the color of the buttons*/
-  .burger-button span{
+
+  .burger-button span {
     width: 40px;
     border: 2px solid white;
     background-color: white;
     display: block;
-    transition: .5s;
+    transition: 0.5s;
   }
-  .burger-button.active span{
+
+  .burger-button.active span {
     border-color: white;
     background-color: white;
   }
-  
-  .burger-top, .burger-bottom{
+
+  .burger-top,
+  .burger-bottom {
     position: absolute;
   }
-  
-  .burger-top{
+
+  .burger-top {
     top: -02px;
   }
-  
-  .burger-bottom{
+
+  .burger-bottom {
     bottom: -02px;
   }
-  /* make sure this has the same top as the burger button has padding*/
-  .burger-button.active .burger-top{
+
+  .burger-button.active .burger-top {
     position: absolute;
     top: 8px;
     transform: rotateZ(45deg);
   }
-  
-  .burger-button.active .burger-middle{
-  /*   transform: rotateZ(270deg); */
-    border-color: white;
-    background-color:white;
+
+  .burger-button.active .burger-middle {
+    border-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
   }
-  
-  /* make sure this has the same bottom as the burger button has padding*/
-  
-  .burger-button.active .burger-bottom{
+
+  .burger-button.active .burger-bottom {
     position: absolute;
     bottom: 8px;
     transform: rotateZ(-45deg);
   }
-  
+
   .burger-menu {
-      display: flex;
-      position: fixed;
-      top: -100vh;
-      left:0;
-      right: 0;
-      bottom: 100vh;
-      background-color: black;
-      padding:5px;
-      z-index: 8;
-    transition:.5s;
-      align-content:space-around;
-    justify-content:space-around;
-    flex-direction:column;
+    display: flex;
+    position: fixed;
+    top: -100vh;
+    left: 0;
+    right: 0;
+    bottom: 100vh;
+    background-color: black;
+    z-index: 8;
+    transition: 0.5s;
+    justify-content: center;
+    flex-direction: column;
   }
-  .burger-menu.active{
-    top:0;
-    bottom:0;
+
+  .burger-menu.active {
+    top: 0;
+    bottom: 0;
   }
+
   .burger-menu a {
     text-decoration: none;
     font-size: 20px;
     font-weight: 300;
-    color: #C3BFBC;
-    display:block;
-    text-align:center;
+    color: #c3bfbc;
+    display: block;
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    text-transform: uppercase;
   }
-  
 
   .glitch {
     font-size: 34px;
@@ -603,7 +606,7 @@ h2 {
 
   .txt-rotate {
     font-size: 18px;
-    -webkit-text-stroke: .5px white;
+    -webkit-text-stroke: 0.5px white;
     width: 50%;
   }
 
@@ -623,21 +626,19 @@ h2 {
     padding-top: 15px;
     padding-bottom: 15px;
   }
-
 }
-
 
 @keyframes fade_move_down {
   0% {
-        transform: translate(0, -20px) rotate(45deg);
-        opacity: 0;
+    transform: translate(0, -20px) rotate(45deg);
+    opacity: 0;
   }
   50% {
-        opacity: 1;
+    opacity: 1;
   }
   100% {
-        transform: translate(0, 20px) rotate(45deg);
-        opacity: 0;
+    transform: translate(0, 20px) rotate(45deg);
+    opacity: 0;
   }
 }
 
@@ -669,5 +670,4 @@ h2 {
     -ms-transform: translateY(0);
     transform: translateY(0);
   }
-
 }
