--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body {
   justify-content: center;
   flex-direction: column;
   height: 100vh;
+  margin-bottom: 25px;
 }
 
 li a {
@@ -343,7 +344,7 @@ li a:hover {
 
   100% {
     transform: scale(0.5);
-    opacity: 0.5;
+    opacity: .9;
   }
 }
 
@@ -477,7 +478,7 @@ h2 {
 }
 
 .projectpic img {
-  animation: scale 1s;
+  animation: zoomIn 1s;
   transform: scale(0.5);
   position: absolute;
   z-index: 0;
@@ -485,7 +486,7 @@ h2 {
   margin-right: auto;
   left: 0;
   right: 0;
-  opacity: 0.5;
+  opacity: .6;
 }
 
 .scroll-down {
@@ -504,6 +505,45 @@ h2 {
   border-right: 2px solid #fff;
   -webkit-transform: translate(-50%, 0) rotate(45deg);
   animation: fade_move_down 3s cubic-bezier(0.19, 1, 0.22, 1) infinite;
+}
+
+.footer {
+  padding-top: 50px;
+  width: 65vw;
+}
+
+.contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.separator {
+  opacity: 0.6;
+}
+
+.footerText {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: right;
+  padding-bottom: 25px;
+}
+
+.socialWrapper {
+  display: flex;
+}
+
+.socialNetworks {
+  padding-top: 15px;
+}
+
+.socialWrapper #icons {
+  padding: 50px 15px 50px 0px;
+}
+
+.socialWrapper #icons::before {
+  content: '.';
+  padding-right: 5px;
 }
 
 @media screen and (max-width: 1280px) {
@@ -625,6 +665,19 @@ h2 {
     -webkit-text-stroke: 0px white;
     padding-top: 15px;
     padding-bottom: 15px;
+    z-index: -1;
+  }
+}
+
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+    -webkit-transform: scale3d(0.3, 0.3, 0.3);
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+
+  50% {
+    opacity: .6;
   }
 }
 
@@ -639,20 +692,6 @@ h2 {
   100% {
     transform: translate(0, 20px) rotate(45deg);
     opacity: 0;
-  }
-}
-
-@-webkit-keyframes fadeInUp {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(20px);
-    transform: translateY(20px);
-  }
-
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
   }
 }
 
