--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -224,6 +224,11 @@
       }
     }
   }
+
+  &__links {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 @media screen and (max-width: 1280px) {
